fix: annotation-driven model metrics scraping (#375)